--- a/AplikasiGithubUser/app/src/main/AndroidManifest.xml
+++ b/AplikasiGithubUser/app/src/main/AndroidManifest.xml
@@ -15,6 +15,21 @@
         android:theme="@style/Theme.AplikasiGithubUser"
         tools:targetApi="31">
         <activity
+            android:name=".setting.SettingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".favorite.FavoriteActivity"
+            android:exported="false"
+            android:label="@string/favorite">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".detail.DetailActivity"
             android:exported="false">
             <meta-data
